[package]
edition = "2018"
name = "streaming-frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
image = "0.23.14"
luminance = "0.44.1"
luminance-derive = "0.7.0"
luminance-front = "0.4.0"
luminance-glfw = "0.16.0"
luminance-windowing = "0.10"
reqwest = {version = "0.11.6", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tokio = {version = "1.12.0", features = ["full"]}
